<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FF00"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="957dp"
        android:layout_height="81dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewAssignment2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assignment"
            android:textAlignment="center"
            android:textColor="#0000FF" />

        <TextView
            android:id="@+id/textViewTotalMarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marksTotal"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textViewQuestionsDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questionsTotal"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF00FF"
            android:text="@string/question"
            android:textAlignment="center"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="124dp"
        android:layout_height="155dp"
        android:layout_marginStart="351dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/trueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#0000FF"
            android:text="@string/trueB" />

        <Button
            android:id="@+id/hintButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#0000FF"
            android:text="@string/hintB" />

        <Button
            android:id="@+id/prevButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000FF"
            android:text="@string/previousB" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="118dp"
        android:layout_height="155dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="366dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/falseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#0000FF"
            android:text="@string/falseB" />

        <Button
            android:id="@+id/cheatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#0000FF"
            android:text="@string/cheatB" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000FF"
            android:text="@string/nextB" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>