<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF00"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="965dp"
        android:layout_height="239dp"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="192dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewSureC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hintSure"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textViewHintC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF00FF"
            android:text="@string/hintText"
            android:textAlignment="center"
            android:textColor="#000000" />

        <Button
            android:id="@+id/cheatBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hintConfirm" />

        <Button
            android:id="@+id/exitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/exit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>